# Physical_AI_Book

./: .env  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  docker-compose.yml  index.html  layout.html  package-lock.json  package.json  sitemap.xml  vercel.json
.claude/: settings.local.json
.github/workflows/: deploy.yml
assets/css/: styles.9184dba9.css
assets/js/: 0058b4c6.726030cd.js  0480b142.25e9ac1f.js  0480b142.b97c4f9b.js  0dae308e.d15a470c.js  0e384e19.f6d6b410.js  23cfa132.8c2d3aeb.js  2518c7e4.e5d120f8.js  28688c2f.2aea7243.js  (+54 more)
backend/: .flake8  README.md  pyproject.toml
backend/src/: __init__.py  database.py
backend/src/api/: __init__.py  auth.py  axiosClient.js  chat.py  courses.py  main.py  progress.py
backend/src/models/: __init__.py  base.py  chat.py  course.py  progress.py  user.py
backend/src/physical_ai_book_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/services/: __init__.py  auth.py  chat.py  course.py  progress.py
backend/src/services/ai/: __init__.py  rag_service.py
backend/src/services/ros2/: __init__.py
backend/src/services/simulation/: __init__.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_courses.py  test_main.py  test_rag_service.py
docs/: about.html  conclusion.html  development-setup.html  faq.html  intro.html
frontend/: docusaurus.config.js  package-lock.json  package.json  sidebars.js  vercel.json
layout/: index.html
scripts/: setup_dev_env.bat  setup_dev_env.sh
(+174 files in other folders)
